--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wrong answer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wrong Answer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Wrong answer</h1>
+  <h1>Wrong Answer</h1>
+
+  <form id="username-form">
+    <input id="username" placeholder="Enter your name" required />
+    <button type="submit">Join Game</button>
+  </form>
+
+  <div id="game" class="hidden">
+    <div id="question"></div>
+
+    <form id="answer-form" class="hidden">
+      <input id="answer" placeholder="Your answer" required />
+      <button type="submit">Submit Answer</button>
+    </form>
+
+    <form id="vote-form" class="hidden">
+      <input id="vote" placeholder="Vote for impostor" required />
+      <button type="submit">Vote</button>
+    </form>
+
+    <div id="message-box" class="hidden"></div>
+    <div id="answers"></div>
+    <div id="result"></div>
+  </div>
+
+  <script type="module" src="main.js"></script>
 </body>
 </html>
